<resources>
    <string name="app_name">LatihanAPP8</string>
    <string name="Hallo">Hallo apa kabarnya</string>
    <string name="apakabar">bagaimana kabarnya</string>
    <string name="button_label_toast">Toast</string>
    <string name="toast_button_toast">Hello Toast!</string>
    <string name="button_label_hitung">Hitung</string>
    <string name="Hitung_initianl_value">1</string>
    <string name="toast_pesan">Hebat Bro</string>
    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav">Tab Experiment</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="action">Action</string>
    <string name="isi_fragment1">Ini fragment 1</string>
    <string name="isi_fragment2">Ini fragment 2</string>
    <string name="isi_fragment3">Ini fragment 3</string>
    <string name="cts">Cek Toko Sebelah</string>
    <string name="msb">My Stupid Boss</string>
    <string name="comic">Comic-8</string>
    <string name="dilan">Dilan 1990</string>
    <string name="milea">Milea  Suara dari Dilan</string>
    <string name="titanic">Titanic</string>
    <string name="fast">Fast and Furious 10</string>
    <string name="iron">Iron Man 3</string>
    <string name="avengers">Avanger End Game</string>
    <string name="sinopsis_cts">
        Erwin (Ernest Prakasa) menikmati hidupnya dengan karir gemilang di usia muda, dan kekasih cantik yang tak kalah sukses, Natalie (Gisella Anastasia). Tapi semua jadi pelik saat Koh Afuk (Chew Kin Wah) yang kesehatannya makin memburuk, ingin mewariskan toko sembakonya kepada Erwin, anak kesayangannya.
        Sementara itu, Yohan (Dion Wiyoko) kakak Erwin, naik pitam karena dilangkahi. Sebagai anak sulung yang merasa lebih perhatian pada kedua orang tuanya, Yohan yakin ia dan istrinya, Ayu (Adinia Wirasti), adalah yang paling berhak meneruskan toko tersebut. Sayangnya, Koh Afuk sulit mempercayai Yohan yang selalu memberontak.
        Apakah Erwin akan terpaksa mengorbankan karirnya untuk mengurusi toko Koh Afuk meski ditentang keras oleh Natalie? Ataukah Yohan akan berhasil meyakinkan ayahnya bahwa ia sesungguhnya lebih layak dipercaya? Nantikan CEK TOKO SEBELAH, sebuah drama komedi keluarga dari penulis, sutradara, produser, dan segenap tim kerja dibalik film NGENEST.
    </string>
    <string name="sinopsis_msb">
        Film ini mengisahkan tentang hubungan antara seorang karyawan dan bossnya yang berkelakuan super ajaib! Diana tinggal di Kuala Lumpur mengikuti Dika, suaminya yang bekerja di sana. Diana lalu melamar bekerja di satu perusahaan. Bossnya kebetulan adalah teman kuliah Dika sewaktu di Amerika.
    </string>
    <string name="sinopsis_comic">
        Comic 8: Kasino Kings‘ akan menceritakan misi lanjutan 8 agen rahasia yang berada di bawah pimpinan Indro Warkop untuk menjalankan misi undercover menjadi comic atau stand up comedian, demi mencari seorang comic yang menjadi penghubung ke seorang master kriminal uang bernama The King.
        Kedelapan comic tersebut harus melewati banyak proses dan hambatan, dari harus menghindari kejaran penyelidikan interpol dan kepolisian dari peristiwa perampokan sebelumnya, sampai menghadapi kelompok preman dan penjahat cap kampak. Mereka akhirnya berhasil tiba di pulau rahasia milik The King yang menjadi salah satu kasino terbesar di Asia, di mana para penjudinya berasal dari seluruh dunia.
        Comic 8 harus memutar otak dan melakukan segala cara untuk bisa membebaskan diri dari perangkap yang menunggu mereka, di mana tugas dari misi ini adalah menangkap The King dan menghancurkan kasino tersebut.
    </string>
    <string name="sinopsis_dilan">
        Milea (Vanesha Prescilla) bertemu dengan Dilan (Iqbaal Ramadhan) di sebuah SMA di Bandung. Itu adalah tahun 1990, saat Milea pindah dari Jakarta ke Bandung. Perkenalan yang tidak biasa kemudian membawa Milea mulai mengenal keunikan Dilan lebih jauh. Dilan yang pintar, baik hati dan romantis... semua dengan caranya sendiri. Cara Dilan mendekati Milea tidak sama dengan teman-teman lelakinya yang lain, bahkan Beni, pacar Milea di Jakarta.
        Bahkan cara berbicara Dilan yang terdengar kaku, lambat laun justru membuat Milea kerap merindukannya jika sehari saja ia tak mendengar suara itu. Perjalanan hubungan mereka tak selalu mulus. Beni, gank motor, tawuran, Anhar, Kang Adi, semua mewarnai perjalanan itu. Dan Dilan... dengan caranya sendiri...selalu bisa membuat Milea percaya ia bisa tiba di tujuan dengan selamat. Tujuan dari perjalanan ini. Perjalanan mereka berdua. Katanya, dunia SMA adalah dunia paling indah.
        Dunia Milea dan Dilan satu tingkat lebih indah daripada itu.
    </string>
    <string name="sinopsis_milea">
        Dilan, panglima tempur sebuah geng motor di Bandung awal 90-an, menjalin hubungan dengan seorang siswi baru dari Jakarta bernama Milea. Dilan selalu bahagia saat bersama Milea, namun teman-teman geng motor merasa Dilan makin menjauh dari kelompoknya karena Milea. Terjadi peristiwa yang mengerikan, salah satu anggota mereka, Akew (Gusti Rayhan), meninggal akibat dikeroyok oleh sekelompok orang. Peristiwa itu membuat Milea khawatir akan keselamatan Dilan. Milea membuat keputusan untuk berpisah dengan Dilan sebagai peringatan agar Dilan menjauh dari geng motor. Peristiwa Akew menyeret Dilan ke pihak berwajib bersama teman-temannya. Perpisahan yang tadinya hanya gertakan Milea menjadi perpisahan yang berlangsung lama sampai mereka lulus kuliah dan dewasa. Mereka berdua masih membawa perasaan yang sama saat mereka kembali bertemu di reuni, namun masing-masing saat itu sudah memiliki pasangan.
    </string>
    <string name="sinopsis_titanic">
        Film drama romantis ini mengisahkan kisah cinta yang tragis Rose DeWitt Bukater dengan Jack Dawson di tentang tragedi tenggelamnya kapal Titanic pada 1912. Pada 1996, pemburu harta karun Brock Lovett dan timnya mencari kalung Heart of the Ocean di puing-puing kapal Titanic. Mereka tidak menemukan Heart of the Ocean, tetapi mendapati sebuah peti berisi lukisan seorang perempuan yang mengenakan kalung itu. Perempuan dalam lukisan itu bernama Rose Dawson Calvert pun menceritakan pengalamannya menjadi penumpang Titanic. Rose naik kapal itu ketika berusia 17 tahun. Dia bersama ibunya, Ruth DeWitt Bukater dan tunangannya Caledon Nathan Hockley. Di kapal itu, Rose yang tidak mencintai tunangannya bertemu Jack Dawson, seorang seniman miskin. Kedekatan dua insan yang berbeda status sosial itu diawali Jack menyelamatkan Rose yang hendak mengakhiri hidupnya.
    </string>
    <string name="sinopsis_fast">
        Selama banyak misi dan melawan rintangan yang mustahil, Dom Toretto dan keluarganya telah mengakali dan mengalahkan setiap musuh di jalan mereka. Sekarang, mereka menghadapi lawan paling mematikan yang pernah mereka hadapi: Ancaman mengerikan yang muncul dari bayang-bayang masa lalu yang dipicu oleh dendam berdarah, dan yang bertekad untuk menghancurkan keluarga ini dan menghancurkan segalanyadan semua orangyang dicintai Dom, selamanya. Dalam Fast Five 2011, Dom dan krunya mengalahkan gembong narkoba Brasil Hernan Reyes yang jahat dan memenggal kerajaannya di sebuah jembatan di Rio De Janeiro.
        Apa yang tidak mereka ketahui adalah bahwa putra Reyes, Dante, menyaksikan semuanya dan telah menghabiskan 12 tahun terakhir mendalangi rencana untuk membuat Dom membayar harga tertinggi. Plot Dante akan menyebarkan keluarga Dom dari Los Angeles ke katakombe Roma, dari Brasil ke London dan dari Portugal ke Antartika. Sekutu baru akan ditempa dan musuh lama akan muncul kembali. Tapi semuanya berubah ketika Dom menemukan bahwa putranya sendiri yang berusia 8 tahun adalah target utama balas dendam Dante.
    </string>
    <string name="sinopsis_iron">
        Industrialis brilian Tony Stark / Iron Man menghadapi musuh yang tak kenal batas. Dunia Tony dihancurkan dan ia menyelidiki siapa yang bertanggung jawab untuk kerusakan tersebut. Berbekal peralatan dan instingnya, Tony berusaha menyelamatkan orang-orang yang dikasihinya. Pertanyaan lama kembali menghantuinya; apakah manusia yang membuat baju Iron Man atau baju tersebut yang menentukan identitasnya sebagai manusia?
    </string>
    <string name="sinopsis_avenger">
        Melanjutkan Avengers Infinity War, dimana kejadian setelah Thanos berhasil mendapatkan semua infinity stones dan memusnahkan 50% semua mahluk hidup di alam semesta. Akankah para Avengers berhasil mengalahkan Thanos?
    </string>
</resources>